Scrolling to headings fixed
No longer hidden behind the sticky header

--- a/spider.css
+++ b/spider.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 195px;
+}
+
 div#content{
   margin-bottom: 20px;
   background-color: white;
